cabal-version:      2.4
name:               yadasm-core
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:        "Yet Another Disassembler"

-- A longer description of the package.
description:        "Yet Another Disassembler"

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Lukas Krickl
maintainer:         lukas@krickl.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  build-depends:   base, 
    bytestring, 
    directory,
    array, 
    unordered-containers
  hs-source-dirs: src
  exposed-modules: Yadasm, 
    Yadasm.Binary, 
    Yadasm.Comparator, 
    Yadasm.Symbol,
    Yadasm.Parser,
    Yadasm.Node,
    Yadasm.Line,
    Yadasm.Context,
    Yadasm.Definition,
    Yadasm.Archs.Arch6502,
    Yadasm.Archs.Arch65C02,
    Yadasm.Archs.Arch65C816,
    Yadasm.Archs.Arch6502Helpers,
    Yadasm.Archs.ArchRaw,
    Yadasm.Archs.Arch6502Bytes,
    Yadasm.Plugins.AlAs65C816,
    Yadasm.Plugins.InsertWord,
    Yadasm.Plugins.PadLineTo,
    Yadasm.Plugins.ChainParser
  default-language: Haskell2010
  other-extensions: BinaryLiterals

Test-Suite yadasm-tests
  main-is: Main.hs
  type: exitcode-stdio-1.0
  other-modules: Yadasm.TestComparator, 
    Yadasm.TestBinary,
    Yadasm.TestNode,
    Yadasm.TestParser,
    Yadasm.TestContext,
    Yadasm.TestLine,
    Yadasm.Archs.TestArch6502, 
    Yadasm.Archs.TestArch65C02, 
    Yadasm.Archs.TestArch65C816,
    Yadasm.Archs.TestArchRaw,
    Yadasm.Archs.TestArch6502Bytes,
    Yadasm.Plugins.TestAlAs65C816,
    Yadasm.Plugins.TestInsertWord,
    Yadasm.Plugins.TestPadLineTo,
    Yadasm.Plugins.TestChainParser
  build-depends:   base, 
    yadasm-core, 
    HUnit, 
    test-framework,
    test-framework-hunit,
    bytestring,
    unordered-containers
  hs-source-dirs: tests
  default-language: Haskell2010

executable yadasm
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base, 
      yadasm-core, 
      argparser,
      bytestring,
      unordered-containers
    hs-source-dirs: app
    default-language: Haskell2010
