[package]
name = "yadasm"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/yadasm"
readme = "../README.md"
edition = "2021"

[lib]
name = "yadasm"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
