[package]
name = "yadasm"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = ""
license = "MIT"
homepage = "https://github.com/unlink2/yadasm"
readme = "../README.md"
edition = "2021"

[lib]
name = "yadasm"
path = "src/lib.rs"

[dependencies]
clap = { optional = true, version = "3.1.6", features = ["derive"] }
serde = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" } 

[features]
default = ["serde", "interface"]
serde = ["dep:serde", "dep:serde_json"]
interface = ["dep:clap"]
no_std = []
